--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,28 @@
-Django==3.2.9
-Flask==1.1.4
+anyio==3.6.1
+atomicwrites==1.4.1
+attrs==21.4.0
+certifi==2022.6.15
+charset-normalizer==2.1.0
+click==8.1.3
+colorama==0.4.5
+fastapi==0.79.0
+h11==0.13.0
+idna==3.3
+importlib-metadata==4.12.0
+iniconfig==1.1.1
+packaging==21.3
+pluggy==1.0.0
+py==1.11.0
+pydantic==1.9.1
+pyparsing==3.0.9
+pytest==7.1.2
+python-multipart==0.0.5
+requests==2.28.1
+six==1.16.0
+sniffio==1.2.0
+starlette==0.19.1
+tomli==2.0.1
+typing-extensions==4.3.0
+urllib3==1.26.10
+uvicorn==0.18.2
+zipp==3.8.1
